# prompt-wars

./: .gitignore  .gitmodules  AGENT_REGISTRATION_RETRY_GUIDE.md  IMPLEMENTATION_STATUS.md  PORT_ASSIGNMENTS.md  QUICK_START.md  README.md  STAKE_FIX_SUMMARY.md  WALLET_TRANSACTION_TROUBLESHOOTING.md  fix-stake-errors.sh  install-all.sh  package.json  start-all.sh  start-frontend.sh  stop-all.sh  test-start.sh  usage-events-2025-12-10.csv
anxious-agent/: .env  jest.setup.js  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
blockchain-mocks/: cronos.ts  solana.js  solana.ts
contract/: README.md
contrarian-agent/: .env  .env.example  DEPLOYMENT.md  README.md  agent-server.js  jest.config.js  jest.setup.js  package-lock.json  package.json  startup.js  tsconfig.build.json  validate-setup.js
degen-agent/: .env  .env.example  CHAIN_OF_THOUGHT.md  DEPLOYMENT.md  INTEGRATION_SUMMARY.md  README.md  SIMULATOR_IMPLEMENTATION_SUMMARY.md  WORKING_SOLUTION.md  agent-server-simple.js  agent-server.js  basic-server.js  jest.config.js  minimal-server.js  minimal-working-server.js  package-lock.json  package.json  pnpm-lock.yaml  python-server.py  run-agent.js  simple-http-server.js  startup.js  tailwind.config.js  test-chain-of-thought.js  test-final-integration.js  test-final-simple.js  test-integration.js  test-server.js  test-simple-server.js  validate-setup.js  working-server.cjs
frontend/: .eslintrc.cjs  AGENT_REGISTRATION.md  compose.yaml  package.json  (+4 more)
stake/programs/agent_registry/: Cargo.toml
stake/programs/agent_registry/src/: lib.rs
(+214 files in other folders)
