[package]
name = "agent_registry"
version = "0.1.0"
description = "Agent registry with staking, proof requests, and slashing."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_registry"

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }

[features]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-idl = []
